# openapi-generator-bazel

./: .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extension.bzl  maven_install.json
.bazelci/: presubmit.yml
.bcr/: metadata.template.json
.github/workflows/: ci.yaml
examples/golang/: BUILD  WORKSPACE  go.mod  workspace.bzl
examples/golang/src/: BUILD  main.go
internal/: BUILD.bazel  copier.bzl  openapi_generator.bzl
internal/scripts/: create_release_tarball.sh
internal/test/: BUILD.bazel  petstore.yaml
internal/test/basic/: BUILD.bazel  MODULE.bazel  config.yaml
internal/test/basic/python-templates/: __init__.mustache
internal/test/bcr/: .gitignore  MODULE.bazel
internal/test/bcr-custom-version/: BUILD  MODULE.bazel  petstore.yaml
internal/test/older-version/: BUILD  MODULE.bazel  petstore.yaml
internal/test/templates/: api.mustache
