# Copyright 2019 OpenAPI-Generator-Bazel Contributors

load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_deb")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "release",
    srcs = [
        "BUILD.bazel",
        "LICENSE",
        "defs.bzl",
        "//internal:BUILD.bazel",
        "//internal:openapi_generator.bzl",
    ],
    extension = "tar.gz",
    strip_prefix = "./openapi_tools_generator_bazel",
    tags = ["manual"],
)
