module(
  name = "openapi_tools_generator_bazel",
  version = "0.1.6",
)

bazel_dep(name = "rules_jvm_external", version = "5.3")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = ["org.openapitools:openapi-generator-cli:6.5.0"],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

bazel_dep(name = "rules_pkg", version = "0.9.1")
