# Copyright 2019 OpenAPI-Generator-Bazel Contributors

load("@openapi_tools_generator_bazel//:defs.bzl", "openapi_generator")

openapi_generator(
    name = "petstore",
    generator = "go",
    spec = "petstore.yaml",
)

openapi_generator(
    name = "petstore_java",
    generator = "java",
    spec = "petstore.yaml",
)

openapi_generator(
    name = "petstore_java_feign",
    additional_properties = {
        "library": "feign",
    },
    generator = "java",
    spec = "petstore.yaml",
)

openapi_generator(
    name = "petstore_java_no_tests",
    generator = "java",
    spec = "petstore.yaml",
    system_properties = {
        "apiTests": "false",
        "modelTests": "false",
    },
)

openapi_generator(
    name = "petstore_java_bigdecimal",
    generator = "java",
    spec = "petstore.yaml",
    type_mappings = {
        "Integer": "java.math.BigDecimal",
    },
)

openapi_generator(
    name = "petstore_java_vertx",
    generator = "java-vertx-web",
    spec = "petstore.yaml",
    template_dir = "templates",
    additional_properties = {
        "apiPackage"           : "com.foo.generated.api",
        "modelPackage"         : "com.foo.generated.model",
        "dateLibrary"          : "java8",
        "useBeanValidation"    : "true",
        "performBeanValidation": "true",
        "snapshotVersion"      : "true"
    },
)

openapi_generator(
    name = "petstore_java_reserved_words",
    generator = "java",
    spec = "petstore.yaml",
    reserved_words_mappings = [
        "interface=interface",
    ],
)

