# Copyright 2019 OpenAPI-Generator-Bazel Contributors

load("@openapi_tools_generator_bazel//:defs.bzl", "openapi_generator")

openapi_generator(
    name = "petstore",
    generator = "go",
    spec = "petstore.yaml",
)

openapi_generator(
    name = "petstore_java",
    generator = "java",
    spec = "petstore.yaml",
)

openapi_generator(
    name = "petstore_java_feign",
    additional_properties = {
        "library": "feign",
    },
    generator = "java",
    spec = "petstore.yaml",
)

openapi_generator(
    name = "petstore_java_no_tests",
    generator = "java",
    spec = "petstore.yaml",
    system_properties = {
        "apiTests": "false",
        "modelTests": "false",
    },
)

openapi_generator(
    name = "petstore_java_bigdecimal",
    generator = "java",
    spec = "petstore.yaml",
    type_mappings = {
        "Integer": "java.math.BigDecimal",
    },
)

openapi_generator(
    name = "petstore_java_reserved_words",
    generator = "java",
    spec = "petstore.yaml",
    reserved_words_mappings = [
        "interface=interface",
    ],
)

openapi_generator(
    name = "petstore_python_flask_with_config_tag",
    generator = "python-flask",
    spec = "petstore.yaml",
    config = "config.yaml"
)

openapi_generator(
    name = "petstore_python_flask_with_template_dir",
    generator = "python-flask",
    spec = "petstore.yaml",
    template_dir = "python-templates"
)
