# Copyright 2019 OpenAPI-Generator-Bazel Contributors

load("@openapi_tools_generator_bazel//:defs.bzl", "openapi_generator")

openapi_generator(
    name = "petstore",
    generator = "go",
    specs = ["petstore.yaml"],
)

openapi_generator(
    name = "petstore_java",
    generator = "java",
    specs = ["petstore.yaml"],
)

openapi_generator(
    name = "petstore_java_feign",
    additional_properties = {
        "library": "feign",
    },
    generator = "java",
    specs = ["petstore.yaml"],
)

openapi_generator(
    name = "petstore_java_no_tests",
    generator = "java",
    specs = ["petstore.yaml"],
    system_properties = {
        "apiTests": "false",
        "modelTests": "false",
    },
)

openapi_generator(
    name = "petstore_java_bigdecimal",
    generator = "java",
    specs = ["petstore.yaml"],
    type_mappings = {
        "Integer": "java.math.BigDecimal",
    },
)

openapi_generator(
    name = "petstore_java_reserved_words",
    generator = "java",
    reserved_words_mappings = [
        "interface=interface",
    ],
    specs = ["petstore.yaml"],
)

openapi_generator(
    name = "petstore_python_flask_with_config_tag",
    config = "config.yaml",
    generator = "python-flask",
    specs = ["petstore.yaml"],
)

openapi_generator(
    name = "petstore_python_flask_with_template_dir",
    generator = "python-flask",
    specs = ["petstore.yaml"],
    template_dir = "python-templates",
)

openapi_generator(
    name = "petstore_python_nextgen_with_multiple_specs",
    generator = "python-nextgen",
    specs = glob(["petstore-separate/**/*.yaml"]),
)
